Corrected typos